<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<RelativeLayout
	    android:id="@+id/inputCountLayoutId"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/border_bg">
	    <Button
	        android:id="@+id/certainBtnId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/certain"
	        android:textSize="@dimen/text_size"
	        android:onClick="onClick"
	        />
	    <EditText
	        android:id="@+id/inputEditTxtId"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/certainBtnId"
	        android:inputType="number"
	        android:maxLines="1"
	        android:hint="@string/input_toast"
	        android:textSize="@dimen/text_size"
	        />
	</RelativeLayout>
	
	<RelativeLayout
	    android:id="@+id/generateLayoutId"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/inputCountLayoutId"
	    android:layout_marginTop="20.0dp"
	    android:background="@drawable/border_bg"
	    android:visibility="gone">
	    <RelativeLayout
	        android:id="@+id/headerLayoutId"
	        android:layout_width="@dimen/icon_width"
	        android:layout_height="@dimen/icon_width"
	        android:layout_marginTop="10.0dp"
	        android:background="@drawable/image_border_bg"
	        android:layout_centerHorizontal="true">
	        <ImageView
		        android:id="@+id/headerImgId"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="@android:color/white"
		        android:contentDescription="@string/app_name"
		        />
	    </RelativeLayout>
	    <Button
	        android:id="@+id/okBtnId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/headerLayoutId"
	        android:text="@string/ok"
	        android:textSize="@dimen/text_size"
	        android:layout_below="@id/headerLayoutId"
	        android:layout_centerHorizontal="true"
	        android:onClick="onClick"
	        />
	    <Button
	        android:id="@+id/selectBtnId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10.0dp"
	        android:layout_below="@id/headerLayoutId"
	        android:layout_alignRight="@id/headerLayoutId"
	        android:text="@string/select"
	        android:textSize="@dimen/text_size"
	        android:layout_centerHorizontal="true"
	        android:onClick="onClick"
	        />
	</RelativeLayout>
</RelativeLayout>